# neural-net-rs

./: Cargo.toml  README.md  justfile  notes.md
examples/: c00-1_graphviz_toy.rs  c00-2_graphviz_model.rs  c00_micro_grad_make_moons.rs  c00_micrograd_make_moons.rs  c01-2_tokenizer_shakespeare.rs  c01_tokenizer.rs  make_moons.rs
src/: engine.rs  error.rs  lib.rs  main.rs  neural_net.rs  visualize.rs
src/micrograd/: engine.rs  mod.rs  neural_net.rs  visualize.rs
src/transformer/: tokenizer.rs
