[package]
name = "neural-net-rs"
version = "0.1.0"
edition = "2021"
authors = ["Frederik Kirk", "Anton Kirk"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build]
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies]
impl_ops = "0.1.1"
uuid = { version = "1.8.0", features = ["v4"] }
